--- a/app/src/main/res/menu/activity_customer_drawer.xml
+++ b/app/src/main/res/menu/activity_customer_drawer.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/ic_baseline_home_24"
             android:title="@string/menu_home" />
         <item
+            android:id="@+id/loginFragment"
+            android:icon="@drawable/ic_baseline_login_24"
+            android:title="@string/menu_login" />
+        <item
             android:id="@+id/nav_profile_customer"
             android:icon="@drawable/ic_baseline_person_24"
             android:title="@string/menu_profile" />
