--- a/app/src/main/res/menu/customer.xml
+++ b/app/src/main/res/menu/customer.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_log_out"
+        android:icon="@drawable/ic_baseline_logout_white_24"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="Log Out"
+        />
 </menu>
