--- a/app/src/main/res/layout/fragment_customer_feedback.xml
+++ b/app/src/main/res/layout/fragment_customer_feedback.xml
@@ -45,8 +45,8 @@
         android:layout_marginStart="34dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="137dp"
-        android:backgroundTint="@color/grey"
-        android:progressTint="@color/red"
+        android:backgroundTint="#E9E9E9"
+        android:progressTint="#F90303"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
