--- a/app/src/main/res/layout/fragment_home_admin.xml
+++ b/app/src/main/res/layout/fragment_home_admin.xml
@@ -111,7 +111,7 @@
             android:layout_height="55dp"
             android:layout_marginStart="16dp"
             android:text="@string/adminViewFeedback"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageViewCustomerFeedback"
             app:layout_constraintStart_toStartOf="@+id/imageViewCustomerFeedback"
