--- a/app/src/main/res/layout/nav_header_customer.xml
+++ b/app/src/main/res/layout/nav_header_customer.xml
@@ -21,12 +21,12 @@
         app:srcCompat="@drawable/ic_baseline_account_circle_24" />
 
     <TextView
-        android:id="@+id/textViewUsername"
+        android:id="@+id/textViewUsernameCustomer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:fontFamily="sans-serif"
-        android:text="Username"
+        android:text="@string/nav_header_title"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,15 +35,15 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/textViewEmail"
+        android:id="@+id/textViewEmailCustomer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Email"
+        android:text="@string/nav_header_subtitle"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.112"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewUsernameCustomer" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
