--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,17 +4,16 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
-
         <item
             android:id="@+id/nav_home_customer"
             android:icon="@drawable/ic_baseline_home_24"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_profile_admin"
-            android:icon="@drawable/ic_baseline_person_24"
-            android:title="@string/menu_profile" />
+            android:id="@+id/loginFragment"
+            android:icon="@drawable/ic_baseline_login_24"
+            android:title="@string/menu_login" />
         <item
-            android:id="@+id/nav_aboutUs_admin"
+            android:id="@+id/nav_aboutUs_customer"
             android:icon="@drawable/ic_baseline_info_24"
             android:title="@string/menu_aboutUs" />
     </group>
