--- a/app/src/main/res/layout/fragment_view_all_popular.xml
+++ b/app/src/main/res/layout/fragment_view_all_popular.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Customer.ViewAllPopularFragment">
+    tools:context=".ViewAllPopularFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/view_all_popular_recycler_view"
