--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,7 +5,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home_customer"
+            android:id="@+id/nav_home_main"
             android:icon="@drawable/ic_baseline_home_24"
             android:title="@string/menu_home" />
         <item
@@ -13,7 +13,7 @@
             android:icon="@drawable/ic_baseline_login_24"
             android:title="@string/menu_login" />
         <item
-            android:id="@+id/nav_aboutUs_customer"
+            android:id="@+id/nav_aboutUs_main"
             android:icon="@drawable/ic_baseline_info_24"
             android:title="@string/menu_aboutUs" />
     </group>
