--- a/app/src/main/res/navigation/admin_navigation.xml
+++ b/app/src/main/res/navigation/admin_navigation.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/admin_navigation"
-    app:startDestination="@id/nav_home_customer">
+    app:startDestination="@id/nav_home_admin">
     <fragment
-        android:id="@+id/nav_home_customer"
+        android:id="@+id/nav_home_admin"
         android:name="tarc.edu.carpartsapp.Admin.HomeAdminFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home_admin" >
