--- a/app/src/main/res/menu/activity_customer_drawer.xml
+++ b/app/src/main/res/menu/activity_customer_drawer.xml
@@ -21,6 +21,10 @@
             android:icon="@drawable/ic_baseline_shopping_cart_24"
             android:title="@string/menu_myOrder" />
         <item
+            android:id="@+id/nav_feedback_customer"
+            android:icon="@drawable/ic_baseline_feedback_24"
+            android:title="@string/menu_feedback" />
+        <item
             android:id="@+id/nav_aboutUs_customer"
             android:icon="@drawable/ic_baseline_info_24"
             android:title="@string/menu_aboutUs" />
