ruth-admin feedback

--- a/app/src/main/res/navigation/admin_navigation.xml
+++ b/app/src/main/res/navigation/admin_navigation.xml
@@ -15,6 +15,9 @@
         <action
             android:id="@+id/action_nav_home_admin_to_nav_selection_view_all_admin"
             app:destination="@id/nav_selection_view_all_admin" />
+        <action
+            android:id="@+id/action_nav_home_admin_to_fragmentAdminViewFeedback"
+            app:destination="@id/fragmentAdminViewFeedback" />
     </fragment>
     <fragment
         android:id="@+id/nav_popular_car_parts_admin"
@@ -259,5 +262,14 @@
         <action
             android:id="@+id/action_nav_edit_delete_view_all_recommended_car_parts_admin_to_nav_view_all_recommended_car_parts_admin"
             app:destination="@id/nav_view_all_recommended_car_parts_admin" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentAdminViewFeedback"
+        android:name="tarc.edu.carpartsapp.FragmentAdminViewFeedback"
+        android:label="fragment_admin_view_feedback"
+        tools:layout="@layout/fragment_admin_view_feedback" >
+        <action
+            android:id="@+id/action_fragmentAdminViewFeedback_to_nav_home_admin"
+            app:destination="@id/nav_home_admin" />
     </fragment>
 </navigation>
