--- a/app/src/main/res/layout/view_all_recommended_admin.xml
+++ b/app/src/main/res/layout/view_all_recommended_admin.xml
@@ -44,6 +44,7 @@
                     android:layout_height="wrap_content"
                     android:text="ID"
                     android:textSize="12sp"
+                    android:textStyle="bold"
                     />
 
             </LinearLayout>
