--- a/app/src/main/res/layout/view_all_recommended_customer.xml
+++ b/app/src/main/res/layout/view_all_recommended_customer.xml
@@ -27,6 +27,28 @@
             android:layout_marginLeft="10dp"
             android:orientation="vertical">
 
+            <LinearLayout android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Product ID: "
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/recommended_item_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="ID"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    />
+
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/recommended_item_name"
                 android:layout_width="match_parent"
