--- a/app/src/main/res/layout/fragment_my_order_credit_card.xml
+++ b/app/src/main/res/layout/fragment_my_order_credit_card.xml
@@ -61,28 +61,27 @@
     <TextView
         android:id="@+id/textView14"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="130dp"
         android:background="#FFEA00"
         android:padding="10dp"
         android:textSize="28dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textViewLabelTotal"
         android:layout_width="wrap_content"
         android:layout_height="38dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="28dp"
         android:text="Total Amount: RM"
         android:textSize="28dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/textView14"
+        app:layout_constraintBottom_toTopOf="@+id/buttonGoToDelivery"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
-        app:layout_constraintVertical_bias="0.461" />
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
 
     <TextView
         android:id="@+id/textViewTotalAmount3"
@@ -92,10 +91,28 @@
         android:text="0.00"
         android:textSize="28dp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/buttonGoToDelivery"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+
+
+    <Button
+        android:id="@+id/buttonGoToDelivery"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_marginStart="5dp"
+        android:layout_weight="1"
+        android:background="@drawable/shape_button"
+        android:minHeight="10dp"
+        android:text="Go To Delivery"
+        android:textColor="@color/black"
+        app:backgroundTint="#FDC12A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
-        app:layout_constraintVertical_bias="0.47" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="TouchTargetSizeCheck" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
